--- a/public/scss/abstracts/_variables.scss
+++ b/public/scss/abstracts/_variables.scss
@@ -1,7 +1,6 @@
 $color-primary-black: #0b0c10;
 $color-dark-grey: #1f2833;
 $color-light-grey: #c5c6c7;
-$color-primary-blue: #66fcf1;
-$color-secondary-blue: #45A29E;
-
-
+$color-white: #fff;
+$color-green: #45A29E;
+$color-background-grey: #f7f7f7;
