--- a/public/scss/components/_navigation.scss
+++ b/public/scss/components/_navigation.scss
@@ -19,15 +19,11 @@
             a{
                 color: $color-primary-black;
                 
-            }
-
-            a:link,
-            a:hover{
-                text-decoration: none; 
-                color: $color-green;
-            }
-            &:hover{
-                // transform: scale(1.4);
+                &:hover,
+                &:active{
+                    text-decoration: none; 
+                    color: $color-green;
+                }
             }
         }
     }
