--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -12,6 +12,14 @@ body {
   box-sizing: border-box;
   background-color: #f7f7f7; }
 
+@keyframes changeColor {
+  100% {
+    background: #45A29E; } }
+
+@keyframes changeOpacity {
+  100% {
+    opacity: 1; } }
+
 body {
   font-family: "Lato", sans-serif;
   font-size: 2rem; }
@@ -66,10 +74,20 @@ body {
   letter-spacing: 1px;
   text-align: center; }
   .education_content--first {
-    border-right: 0.1rem solid #45A29E; }
+    border-right: 0.2rem solid #45A29E; }
   .education_content span:first-child {
     letter-spacing: 0px;
     font-size: 1.5rem; }
+
+.projects_content-project--heading {
+  font-size: 1.6rem;
+  font-weight: 500;
+  display: block;
+  letter-spacing: 1.2px; }
+
+.projects_content-project--description {
+  font-size: 1.3rem;
+  font-weight: 300; }
 
 section {
   position: relative; }
@@ -83,12 +101,12 @@ section {
     left: 50%;
     transform: translate(-50%, -50%); }
   .header_image-bottom {
-    position: fixed;
+    position: absolute;
     z-index: 1;
     bottom: 0;
     right: 0;
-    width: 200px;
-    height: 200px;
+    width: 15rem;
+    height: 30rem;
     background-image: url("../images/rohit-cropped.png");
     background-size: cover;
     background-position: bottom; }
@@ -113,12 +131,218 @@ section {
     padding: 2.5rem; }
 
 #projects .projects_content {
-  padding: 5rem; }
-  #projects .projects_content--item:nth-child(n) {
+  padding: 4rem;
+  text-align: center; }
+  #projects .projects_content--item {
     margin: 1rem;
     width: 99%;
-    height: 25rem;
-    background-color: #1f2833; }
+    height: 18rem;
+    border-radius: 20px; }
+    #projects .projects_content--item:hover {
+      animation: changeOpacity 0.3s ease-in forwards;
+      cursor: pointer; }
+    #projects .projects_content--item .btn-default {
+      margin: 7.5rem auto;
+      padding: 1rem;
+      background-color: #0b0c10;
+      color: #fff; }
+    #projects .projects_content--item a:hover,
+    #projects .projects_content--item a:active {
+      color: #0b0c10;
+      animation: changeColor 0.4s ease-in forwards; }
+  #projects .projects_content #item_univsports {
+    background-image: linear-gradient(to right bottom, rgba(31, 40, 51, 0.5), rgba(31, 40, 51, 0.5)), url("../images/univsports.png");
+    opacity: 0.5;
+    background-size: cover;
+    background-position: center; }
+  #projects .projects_content #item_nbad {
+    background-image: linear-gradient(to right bottom, rgba(31, 40, 51, 0.5), rgba(31, 40, 51, 0.5)), url("../images/nbad.png");
+    opacity: 0.5;
+    background-size: cover;
+    background-position: center; }
+  #projects .projects_content #item_yelp {
+    background-image: linear-gradient(to right bottom, rgba(31, 40, 51, 0.5), rgba(31, 40, 51, 0.5)), url("../images/yelp.png");
+    opacity: 0.5;
+    background-size: cover;
+    background-position: center; }
+  #projects .projects_content #item_wellwishers {
+    background-image: linear-gradient(to right bottom, rgba(31, 40, 51, 0.5), rgba(31, 40, 51, 0.5)), url("../images/wellwishers.png");
+    opacity: 0.5;
+    background-size: cover;
+    background-position: center; }
+  #projects .projects_content #item_careertracker {
+    background-image: linear-gradient(to right bottom, rgba(31, 40, 51, 0.5), rgba(31, 40, 51, 0.5)), url("../images/careertracker.png");
+    opacity: 0.5;
+    background-size: cover;
+    background-position: center; }
+  #projects .projects_content #item_cibo {
+    background-image: linear-gradient(to right bottom, rgba(31, 40, 51, 0.5), rgba(31, 40, 51, 0.5)), url("../images/cibo.png");
+    opacity: 0.5;
+    background-size: cover;
+    background-position: center; }
+  #projects .projects_content-project--description {
+    display: block;
+    margin-bottom: 2rem; }
+
+#skills {
+  background-color: #efefef; }
+  #skills .skills_content {
+    text-align: center; }
+    #skills .skills_content-icon {
+      margin: 0 auto; }
+    #skills .skills_content #icon--html {
+      width: 8rem;
+      height: 8rem;
+      background-image: url("../images/skills/html5.png");
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-position: center; }
+    #skills .skills_content #icon--css {
+      width: 8rem;
+      height: 8rem;
+      background-image: url("../images/skills/css3.png");
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-position: center; }
+    #skills .skills_content #icon--javascript {
+      width: 8rem;
+      height: 8rem;
+      background-image: url("../images/skills/js.png");
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-position: center; }
+    #skills .skills_content #icon--jquery {
+      width: 8rem;
+      height: 8rem;
+      background-image: url("../images/skills/jquery.png");
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-position: center; }
+    #skills .skills_content #icon--react {
+      width: 8rem;
+      height: 8rem;
+      background-image: url("../images/skills/react.png");
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-position: center; }
+    #skills .skills_content #icon--redux {
+      width: 8rem;
+      height: 8rem;
+      background-image: url("../images/skills/redux.png");
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-position: center; }
+    #skills .skills_content #icon--photoshop {
+      width: 8rem;
+      height: 8rem;
+      background-image: url("../images/skills/photoshop.jpg");
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-position: center; }
+    #skills .skills_content #icon--illustrator {
+      width: 8rem;
+      height: 8rem;
+      background-image: url("../images/skills/illustrator.png");
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-position: center; }
+    #skills .skills_content #icon--jasmine {
+      width: 8rem;
+      height: 8rem;
+      background-image: url("../images/skills/jasmine.png");
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-position: center; }
+    #skills .skills_content #icon--aws {
+      width: 8rem;
+      height: 8rem;
+      background-image: url("../images/skills/aws.png");
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-position: center; }
+    #skills .skills_content #icon--heroku {
+      width: 8rem;
+      height: 8rem;
+      background-image: url("../images/skills/heroku.png");
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-position: center; }
+    #skills .skills_content #icon--git {
+      width: 8rem;
+      height: 8rem;
+      background-image: url("../images/skills/git.png");
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-position: center; }
+    #skills .skills_content #icon--bootstrap {
+      width: 8rem;
+      height: 8rem;
+      background-image: url("../images/skills/bootstrap.png");
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-position: center; }
+    #skills .skills_content #icon--googleanalytics {
+      width: 8rem;
+      height: 8rem;
+      background-image: url("../images/skills/googleanalytics.png");
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-position: center; }
+    #skills .skills_content #icon--nodejs {
+      width: 8rem;
+      height: 8rem;
+      background-image: url("../images/skills/nodejs.png");
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-position: center; }
+    #skills .skills_content #icon--sass {
+      width: 8rem;
+      height: 8rem;
+      background-image: url("../images/skills/sass.png");
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-position: center; }
+    #skills .skills_content #icon--express {
+      width: 8rem;
+      height: 8rem;
+      background-image: url("../images/skills/expressjs.png");
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-position: center; }
+    #skills .skills_content #icon--mysql {
+      width: 8rem;
+      height: 8rem;
+      background-image: url("../images/skills/mysql.png");
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-position: center; }
+    #skills .skills_content #icon--java {
+      width: 8rem;
+      height: 8rem;
+      background-image: url("../images/skills/java.png");
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-position: center; }
+    #skills .skills_content #icon--mongodb {
+      width: 8rem;
+      height: 8rem;
+      background-image: url("../images/skills/mongodb.png");
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-position: center; }
+    #skills .skills_content #icon--d3 {
+      width: 8rem;
+      height: 8rem;
+      background-image: url("../images/skills/d3.png");
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-position: center; }
+    #skills .skills_content span {
+      display: block;
+      margin-bottom: 4rem; }
+
+#footer {
+  background-color: #efefef; }
 
 .navigation {
   position: fixed;
@@ -134,7 +358,20 @@ section {
       font-weight: 300; }
       .navigation ul .nav-item a {
         color: #0b0c10; }
-      .navigation ul .nav-item a:link,
-      .navigation ul .nav-item a:hover {
-        text-decoration: none;
-        color: #45A29E; }
+        .navigation ul .nav-item a:hover, .navigation ul .nav-item a:active {
+          text-decoration: none;
+          color: #45A29E; }
+
+@media screen and (max-width: 920px) {
+  html {
+    font-size: 55%; }
+  .education_content--first {
+    border-right: 0;
+    border-bottom: 0.2rem solid #45A29E; } }
+
+@media screen and (max-width: 600px) {
+  html {
+    font-size: 40%; }
+  .education_content--first {
+    border-right: 0;
+    border-bottom: 0.2rem solid #45A29E; } }
