--- a/public/scss/base/_typography.scss
+++ b/public/scss/base/_typography.scss
@@ -79,7 +79,7 @@ body{
         letter-spacing: 1px;
         text-align: center;
         &--first{
-            border-right: 0.1rem solid $color-green;
+            border-right: 0.2rem solid $color-green;
         }
         
         span{
@@ -92,3 +92,18 @@ body{
     }
 }
 
+.projects{
+    &_content{
+        &-project--heading{
+            font-size: 1.6rem;
+            font-weight: 500;
+            display: block;
+            letter-spacing: 1.2px;
+        }
+        &-project--description{
+            font-size: 1.3rem;
+            font-weight: 300;
+            
+        }
+    } 
+}
