add initial files

--- a/public/scss/abstracts/_variables.scss
+++ b/public/scss/abstracts/_variables.scss
@@ -4,3 +4,10 @@ $color-light-grey: #c5c6c7;
 $color-white: #fff;
 $color-green: #45A29E;
 $color-background-grey: #f7f7f7;
+$color-black: #000;
+$color-primary-light: #e7e7e7e7;
+$color-primary-dark: #5E5E5E;
+$color-primary: #45A29E;
+$color-grey-dark: #1f2833;
+$color-grey-dark-3: #1f2833;
+
